--- a/usr.bin/dns-sd/Makefile
+++ b/usr.bin/dns-sd/Makefile
@@ -4,17 +4,19 @@ NO_MAN=
 
 .include <bsd.own.mk>
 
-.PATH: ${.CURDIR}/../../../contrib/mDNSResponder/Clients
+.PATH: ${.CURDIR}/../../contrib/mDNSResponder/Clients
 
 PROG=   dns-sd
 
+WARNS=	2
+
 SRCS=	dns-sd.c ClientCommon.c
 
-SRCDIRS= ${.CURDIR}/../../../contrib/mDNSResponder/mDNSShared \
-	${.CURDIR}/../../../contrib/mDNSResponder/Clients
+SRCDIRS= ${.CURDIR}/../../contrib/mDNSResponder/mDNSShared \
+	${.CURDIR}/../../contrib/mDNSResponder/Clients
 
-CFLAGS+= -I. -I${.CURDIR}/../../../contrib/mDNSResponder/Clients
-CFLAGS+= -I${.CURDIR}/../../../contrib/mDNSResponder/mDNSShared
+CFLAGS+= -I. -I${.CURDIR}/../../contrib/mDNSResponder/Clients
+CFLAGS+= -I${.CURDIR}/../../contrib/mDNSResponder/mDNSShared
 CFLAGS+= -ITARGET_OS_FREEBSD
 
 .if ${MK_INET6_SUPPORT} != "no"
