--- a/.gitattributes
+++ b/.gitattributes
@@ -642,6 +642,38 @@ R50e/syn.c -text
 R50e/tree.c -text
 R50e/var.c -text
 R50e/var_spec.h -text
+R56c/Build.sh -text
+R56c/check.pl -text
+R56c/check.t -text
+R56c/dot.mkshrc -text
+R56c/edit.c -text
+R56c/emacsfn.h -text
+R56c/eval.c -text
+R56c/exec.c -text
+R56c/expr.c -text
+R56c/exprtok.h -text
+R56c/funcs.c -text
+R56c/histrap.c -text
+R56c/jehanne.c -text
+R56c/jobs.c -text
+R56c/lalloc.c -text
+R56c/lex.c -text
+R56c/lksh.1 -text
+R56c/main.c -text
+R56c/mirhash.h -text
+R56c/misc.c -text
+R56c/mksh.1 -text
+R56c/mksh.ico -text svneol=unset#image/x-icon
+R56c/os2.c -text
+R56c/rlimits.opt -text
+R56c/sh.h -text
+R56c/sh_flags.opt -text
+R56c/shf.c -text
+R56c/strlcpy.c -text
+R56c/syn.c -text
+R56c/tree.c -text
+R56c/var.c -text
+R56c/var_spec.h -text
 dist/Build.sh -text
 dist/check.pl -text
 dist/check.t -text
