update for mksh R56c

--- a/bin/mksh/Makefile
+++ b/bin/mksh/Makefile
@@ -13,23 +13,24 @@ SRCS=	lalloc.c eval.c exec.c expr.c funcs.c histrap.c jobs.c lex.c \
 DEFS=	-std=c99
 CFLAGS+=	${DEFS} -fno-asynchronous-unwind-tables -fno-strict-aliasing -fstack-protector-all -fwrapv -I${MKSHDIR}
 
-CFLAGS+=	-DMKSH_BUILDSH -DHAVE_ATTRIBUTE_BOUNDED=0 \
-		-DHAVE_ATTRIBUTE_FORMAT=1 \
+CFLAGS+=	-DMKSH_BUILDSH -DHAVE_STRING_POOLING=1 \
+		-DHAVE_ATTRIBUTE_BOUNDED=1 -DHAVE_ATTRIBUTE_FORMAT=1 \
 		-DHAVE_ATTRIBUTE_NORETURN=1 -DHAVE_ATTRIBUTE_UNUSED=1 \
-		-DHAVE_ATTRIBUTE_USED=1 \
+		 -DHAVE_ATTRIBUTE_PURE=1 -DHAVE_ATTRIBUTE_USED=1 \
 		-DHAVE_SYS_TIME_H=1 -DHAVE_TIME_H=1 -DHAVE_BOTH_TIME_H=1 \
 		-DHAVE_ATTRIBUTE_USED=1 -DHAVE_SYS_BSDTYPES_H=0 \
 		-DHAVE_SYS_FILE_H=1 -DHAVE_SYS_MKDEV_H=0 -DHAVE_SYS_MMAN_H=1 \
 		-DHAVE_SYS_PARAM_H=1 -DHAVE_SYS_RESOURCE_H=1 -DHAVE_SYS_SELECT_H=1 \
 		-DHAVE_SYS_SYSMACROS_H=0 -DHAVE_BSTRING_H=0 \
-		-DHAVE_GRP_H=1 -DHAVE_LIBGEN_H=1 -DHAVE_LIBUTIL_H=1 \
+		-DHAVE_GRP_H=1 -DHAVE_IO_H=0 -DHAVE_LIBGEN_H=1 -DHAVE_LIBUTIL_H=1 \
 		-DHAVE_PATHS_H=1 -DHAVE_STDINT_H=1 \
 		-DHAVE_STRINGS_H=1 -DHAVE_TERMIOS_H=1 -DHAVE_ULIMIT_H=1 -DHAVE_VALUES_H=0 \
 		-DHAVE_CAN_INTTYPES=1 -DHAVE_CAN_UCBINTS=1 \
 		-DHAVE_CAN_INT8TYPE=1 -DHAVE_CAN_UCBINT8=1 \
 		-DHAVE_RLIM_T=1 -DHAVE_SIG_T=1 -DHAVE_SYS_ERRLIST=1 -DHAVE_SYS_SIGNAME=1 \
 		-DHAVE_SYS_SIGLIST=1 -DHAVE_STRSIGNAL=0 -DHAVE_FLOCK=1 \
-		-DHAVE_LOCK_FCNTL=1 -DHAVE_GETRUSAGE=1 -DHAVE_GETTIMEOFDAY=1 \
+		-DHAVE_LOCK_FCNTL=1 -DHAVE_GETRUSAGE=1 \
+		-DHAVE_GETSID=1 -DHAVE_GETTIMEOFDAY=1 \
 		-DHAVE_ISSETUGID=1 -DHAVE_KILLPG=1 \
 		-DHAVE_MEMMOVE=1 -DHAVE_MKNOD=0 -DHAVE_MMAP=1 \
 		-DHAVE_NICE=1 -DHAVE_REVOKE=1 -DHAVE_SETLOCALE_CTYPE=1 \
@@ -39,7 +40,8 @@ CFLAGS+=	-DMKSH_BUILDSH -DHAVE_ATTRIBUTE_BOUNDED=0 \
 		-DHAVE_SYS_ERRLIST_DECL=1 -DHAVE_SYS_SIGLIST_DECL=1 -DHAVE_PERSISTENT_HISTORY=1 \
 		-DHAVE_SILENT_IDIVWRAPV=0 \
 		-DMKSH_BINSHREDUCED -DMKSH_MIDNIGHTBSD01ASH_COMPAT \
-		-DMKSH_DISABLE_DEPRECATED  -DMKSH_BUILD_R=505
+		-DMKSH_DISABLE_DEPRECATED  -DMKSH_BUILD_R=563
+
 
 WARNS?=	0
 MAN=	mksh.1 
