--- a/secure/lib/libcrypto/engines/Makefile
+++ b/secure/lib/libcrypto/engines/Makefile
@@ -1,6 +1,7 @@
-# $FreeBSD: stable/10/secure/lib/libcrypto/engines/Makefile 238405 2012-07-12 19:30:53Z jkim $
+# $MidnightBSD$
+# $FreeBSD: stable/11/secure/lib/libcrypto/engines/Makefile 292287 2015-12-15 19:57:56Z bdrewery $
 
-SUBDIR=	lib4758cca libaep libatalla libchil libcswift libgost libnuron \
-	libsureware libubsec
-
+SUBDIR=	lib4758cca libaep libatalla libcapi libchil libcswift libgost \
+	libnuron libsureware libubsec
+SUBDIR_PARALLEL=
 .include <bsd.subdir.mk>
