--- a/secure/lib/libcrypto/engines/Makefile.inc
+++ b/secure/lib/libcrypto/engines/Makefile.inc
@@ -1,6 +1,7 @@
-# $FreeBSD: stable/10/secure/lib/libcrypto/engines/Makefile.inc 238405 2012-07-12 19:30:53Z jkim $
+# $MidnightBSD$
+# $FreeBSD: stable/11/secure/lib/libcrypto/engines/Makefile.inc 319189 2017-05-30 04:42:36Z ngie $
 
-LCRYPTO_SRC=	${.CURDIR}/../../../../../crypto/openssl
+LCRYPTO_SRC=	${SRCTOP}/crypto/openssl
 .PATH: ${LCRYPTO_SRC}/engines ${LCRYPTO_SRC}/engines/ccgost
 
 SHLIBDIR?= /usr/lib/engines
