--- a/secure/lib/libcrypto/engines/libgost/Makefile
+++ b/secure/lib/libcrypto/engines/libgost/Makefile
@@ -1,10 +1,10 @@
 # $MidnightBSD$
-# $FreeBSD: stable/10/secure/lib/libcrypto/engines/libgost/Makefile 290575 2015-11-09 06:55:04Z ngie $
+# $FreeBSD: stable/11/secure/lib/libcrypto/engines/libgost/Makefile 290207 2015-10-30 20:51:33Z jkim $
 
 SHLIB_NAME?= libgost.so
-SRCS=	gost2001.c gost2001_keyx.c gost89.c gost94_keyx.c gost_ameth.c \
-	gost_asn1.c gost_crypt.c gost_ctl.c gost_eng.c gost_keywrap.c \
-	gost_md.c gost_params.c gost_pmeth.c gost_sign.c gosthash.c \
-	e_gost_err.c
+SRCS=	e_gost_err.c gost2001.c gost2001_keyx.c gost89.c gost94_keyx.c \
+	gost_ameth.c gost_asn1.c gost_crypt.c gost_ctl.c gost_eng.c \
+	gost_keywrap.c gost_md.c gost_params.c gost_pmeth.c gost_sign.c \
+	gosthash.c
 
 .include <bsd.lib.mk>
