--- a/secure/lib/libcrypto/engines/lib4758cca/Makefile
+++ b/secure/lib/libcrypto/engines/lib4758cca/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: stable/10/secure/lib/libcrypto/engines/lib4758cca/Makefile 276486 2014-12-31 23:25:37Z ngie $
+# $MidnightBSD$
+# $FreeBSD: stable/11/secure/lib/libcrypto/engines/lib4758cca/Makefile 264400 2014-04-13 05:21:56Z imp $
 
 SHLIB_NAME?= lib4758cca.so
 SRCS=	e_4758cca.c
