--- a/secure/lib/libcrypto/engines/libchil/Makefile
+++ b/secure/lib/libcrypto/engines/libchil/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: stable/10/secure/lib/libcrypto/engines/libchil/Makefile 160819 2006-07-29 19:41:41Z simon $
+# $MidnightBSD$
+# $FreeBSD: stable/11/secure/lib/libcrypto/engines/libchil/Makefile 160819 2006-07-29 19:41:41Z simon $
 
 SHLIB_NAME?= libchil.so
 SRCS=	e_chil.c
