add missing files

--- a/.gitattributes
+++ b/.gitattributes
@@ -56399,16 +56399,24 @@ secure/lib/libcrypto/Makefile.asm -text
 secure/lib/libcrypto/Makefile.inc -text
 secure/lib/libcrypto/Makefile.man -text
 secure/lib/libcrypto/amd64/aes-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/aesni-gcm-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/aesni-mb-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/aesni-sha1-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/aesni-sha256-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/aesni-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/bsaes-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/cmll-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/ecp_nistz256-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/ghash-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/md5-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/modexp512-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/rc4-md5-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/rc4-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/rsaz-avx2.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/rsaz-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/sha1-mb-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/sha1-x86_64.S svneol=native#text/plain
+secure/lib/libcrypto/amd64/sha256-mb-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/sha256-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/sha512-x86_64.S svneol=native#text/plain
 secure/lib/libcrypto/amd64/vpaes-x86_64.S svneol=native#text/plain
@@ -56420,14 +56428,25 @@ secure/lib/libcrypto/amd64/x86_64cpuid.S svneol=native#text/plain
 secure/lib/libcrypto/engines/Makefile -text
 secure/lib/libcrypto/engines/Makefile.inc -text
 secure/lib/libcrypto/engines/lib4758cca/Makefile -text
+secure/lib/libcrypto/engines/lib4758cca/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libaep/Makefile -text
+secure/lib/libcrypto/engines/libaep/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libatalla/Makefile -text
+secure/lib/libcrypto/engines/libatalla/Makefile.depend svneol=native#text/plain
+secure/lib/libcrypto/engines/libcapi/Makefile svneol=native#text/plain
+secure/lib/libcrypto/engines/libcapi/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libchil/Makefile -text
+secure/lib/libcrypto/engines/libchil/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libcswift/Makefile -text
+secure/lib/libcrypto/engines/libcswift/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libgost/Makefile svneol=native#text/plain
+secure/lib/libcrypto/engines/libgost/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libnuron/Makefile -text
+secure/lib/libcrypto/engines/libnuron/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libsureware/Makefile -text
+secure/lib/libcrypto/engines/libsureware/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/engines/libubsec/Makefile -text
+secure/lib/libcrypto/engines/libubsec/Makefile.depend svneol=native#text/plain
 secure/lib/libcrypto/i386/aes-586.S svneol=native#text/plain
 secure/lib/libcrypto/i386/aesni-x86.S svneol=native#text/plain
 secure/lib/libcrypto/i386/bf-586.S svneol=native#text/plain
@@ -56455,6 +56474,7 @@ secure/lib/libcrypto/man/ASN1_OBJECT_new.3 -text
 secure/lib/libcrypto/man/ASN1_STRING_length.3 -text
 secure/lib/libcrypto/man/ASN1_STRING_new.3 -text
 secure/lib/libcrypto/man/ASN1_STRING_print_ex.3 -text
+secure/lib/libcrypto/man/ASN1_TIME_set.3 svneol=native#text/plain
 secure/lib/libcrypto/man/ASN1_generate_nconf.3 -text
 secure/lib/libcrypto/man/BIO_ctrl.3 -text
 secure/lib/libcrypto/man/BIO_f_base64.3 -text
@@ -56531,6 +56551,12 @@ secure/lib/libcrypto/man/DSA_new.3 -text
 secure/lib/libcrypto/man/DSA_set_method.3 -text
 secure/lib/libcrypto/man/DSA_sign.3 -text
 secure/lib/libcrypto/man/DSA_size.3 -text
+secure/lib/libcrypto/man/EC_GFp_simple_method.3 svneol=native#text/plain
+secure/lib/libcrypto/man/EC_GROUP_copy.3 svneol=native#text/plain
+secure/lib/libcrypto/man/EC_GROUP_new.3 svneol=native#text/plain
+secure/lib/libcrypto/man/EC_KEY_new.3 svneol=native#text/plain
+secure/lib/libcrypto/man/EC_POINT_add.3 svneol=native#text/plain
+secure/lib/libcrypto/man/EC_POINT_new.3 svneol=native#text/plain
 secure/lib/libcrypto/man/ERR_GET_LIB.3 -text
 secure/lib/libcrypto/man/ERR_clear_error.3 -text
 secure/lib/libcrypto/man/ERR_error_string.3 -text
@@ -56556,6 +56582,7 @@ secure/lib/libcrypto/man/EVP_PKEY_derive.3 svneol=native#text/plain
 secure/lib/libcrypto/man/EVP_PKEY_encrypt.3 svneol=native#text/plain
 secure/lib/libcrypto/man/EVP_PKEY_get_default_digest.3 svneol=native#text/plain
 secure/lib/libcrypto/man/EVP_PKEY_keygen.3 svneol=native#text/plain
+secure/lib/libcrypto/man/EVP_PKEY_meth_new.3 svneol=native#text/plain
 secure/lib/libcrypto/man/EVP_PKEY_new.3 -text
 secure/lib/libcrypto/man/EVP_PKEY_print_private.3 svneol=native#text/plain
 secure/lib/libcrypto/man/EVP_PKEY_set1_RSA.3 -text
@@ -56570,6 +56597,7 @@ secure/lib/libcrypto/man/OPENSSL_Applink.3 -text
 secure/lib/libcrypto/man/OPENSSL_VERSION_NUMBER.3 -text
 secure/lib/libcrypto/man/OPENSSL_config.3 -text
 secure/lib/libcrypto/man/OPENSSL_ia32cap.3 -text
+secure/lib/libcrypto/man/OPENSSL_instrument_bus.3 svneol=native#text/plain
 secure/lib/libcrypto/man/OPENSSL_load_builtin_modules.3 -text
 secure/lib/libcrypto/man/OpenSSL_add_all_algorithms.3 -text
 secure/lib/libcrypto/man/PEM_write_bio_CMS_stream.3 svneol=native#text/plain
@@ -56614,6 +56642,9 @@ secure/lib/libcrypto/man/X509_STORE_CTX_new.3 svneol=native#text/plain
 secure/lib/libcrypto/man/X509_STORE_CTX_set_verify_cb.3 svneol=native#text/plain
 secure/lib/libcrypto/man/X509_STORE_set_verify_cb_func.3 svneol=native#text/plain
 secure/lib/libcrypto/man/X509_VERIFY_PARAM_set_flags.3 svneol=native#text/plain
+secure/lib/libcrypto/man/X509_check_host.3 svneol=native#text/plain
+secure/lib/libcrypto/man/X509_check_private_key.3 svneol=native#text/plain
+secure/lib/libcrypto/man/X509_cmp_time.3 svneol=native#text/plain
 secure/lib/libcrypto/man/X509_new.3 -text
 secure/lib/libcrypto/man/X509_verify_cert.3 svneol=native#text/plain
 secure/lib/libcrypto/man/bio.3 -text
@@ -56626,6 +56657,7 @@ secure/lib/libcrypto/man/d2i_ASN1_OBJECT.3 -text
 secure/lib/libcrypto/man/d2i_CMS_ContentInfo.3 svneol=native#text/plain
 secure/lib/libcrypto/man/d2i_DHparams.3 -text
 secure/lib/libcrypto/man/d2i_DSAPublicKey.3 -text
+secure/lib/libcrypto/man/d2i_ECPKParameters.3 svneol=native#text/plain
 secure/lib/libcrypto/man/d2i_ECPrivateKey.3 svneol=native#text/plain
 secure/lib/libcrypto/man/d2i_PKCS8PrivateKey.3 -text
 secure/lib/libcrypto/man/d2i_PrivateKey.3 svneol=native#text/plain
@@ -56640,6 +56672,7 @@ secure/lib/libcrypto/man/des.3 -text
 secure/lib/libcrypto/man/des_modes.3 -text
 secure/lib/libcrypto/man/dh.3 -text
 secure/lib/libcrypto/man/dsa.3 -text
+secure/lib/libcrypto/man/ec.3 svneol=native#text/plain
 secure/lib/libcrypto/man/ecdsa.3 -text
 secure/lib/libcrypto/man/engine.3 -text
 secure/lib/libcrypto/man/err.3 -text
