add more man pages

--- a/.gitattributes
+++ b/.gitattributes
@@ -56707,11 +56707,19 @@ secure/lib/libssl/Makefile -text
 secure/lib/libssl/Makefile.man -text
 secure/lib/libssl/man/SSL_CIPHER_get_name.3 -text
 secure/lib/libssl/man/SSL_COMP_add_compression_method.3 -text
+secure/lib/libssl/man/SSL_CONF_CTX_new.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CONF_CTX_set1_prefix.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CONF_CTX_set_flags.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CONF_CTX_set_ssl_ctx.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CONF_cmd.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CONF_cmd_argv.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CTX_add1_chain_cert.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_add_extra_chain_cert.3 -text
 secure/lib/libssl/man/SSL_CTX_add_session.3 -text
 secure/lib/libssl/man/SSL_CTX_ctrl.3 -text
 secure/lib/libssl/man/SSL_CTX_flush_sessions.3 -text
 secure/lib/libssl/man/SSL_CTX_free.3 -text
+secure/lib/libssl/man/SSL_CTX_get0_param.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_get_ex_new_index.3 -text
 secure/lib/libssl/man/SSL_CTX_get_verify_mode.3 -text
 secure/lib/libssl/man/SSL_CTX_load_verify_locations.3 -text
@@ -56720,11 +56728,16 @@ secure/lib/libssl/man/SSL_CTX_sess_number.3 -text
 secure/lib/libssl/man/SSL_CTX_sess_set_cache_size.3 -text
 secure/lib/libssl/man/SSL_CTX_sess_set_get_cb.3 -text
 secure/lib/libssl/man/SSL_CTX_sessions.3 -text
+secure/lib/libssl/man/SSL_CTX_set1_curves.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CTX_set1_verify_cert_store.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CTX_set_alpn_select_cb.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CTX_set_cert_cb.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_cert_store.3 -text
 secure/lib/libssl/man/SSL_CTX_set_cert_verify_callback.3 -text
 secure/lib/libssl/man/SSL_CTX_set_cipher_list.3 -text
 secure/lib/libssl/man/SSL_CTX_set_client_CA_list.3 -text
 secure/lib/libssl/man/SSL_CTX_set_client_cert_cb.3 -text
+secure/lib/libssl/man/SSL_CTX_set_custom_cli_ext.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_default_passwd_cb.3 -text
 secure/lib/libssl/man/SSL_CTX_set_generate_session_id.3 -text
 secure/lib/libssl/man/SSL_CTX_set_info_callback.3 -text
@@ -56739,6 +56752,7 @@ secure/lib/libssl/man/SSL_CTX_set_session_cache_mode.3 -text
 secure/lib/libssl/man/SSL_CTX_set_session_id_context.3 -text
 secure/lib/libssl/man/SSL_CTX_set_ssl_version.3 -text
 secure/lib/libssl/man/SSL_CTX_set_timeout.3 -text
+secure/lib/libssl/man/SSL_CTX_set_tlsext_servername_callback.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_tlsext_status_cb.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_tlsext_ticket_key_cb.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_CTX_set_tmp_dh_callback.3 -text
@@ -56746,14 +56760,17 @@ secure/lib/libssl/man/SSL_CTX_set_tmp_rsa_callback.3 -text
 secure/lib/libssl/man/SSL_CTX_set_verify.3 -text
 secure/lib/libssl/man/SSL_CTX_use_certificate.3 -text
 secure/lib/libssl/man/SSL_CTX_use_psk_identity_hint.3 svneol=native#text/plain
+secure/lib/libssl/man/SSL_CTX_use_serverinfo.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_SESSION_free.3 -text
 secure/lib/libssl/man/SSL_SESSION_get_ex_new_index.3 -text
 secure/lib/libssl/man/SSL_SESSION_get_time.3 -text
 secure/lib/libssl/man/SSL_accept.3 -text
 secure/lib/libssl/man/SSL_alert_type_string.3 -text
+secure/lib/libssl/man/SSL_check_chain.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_clear.3 -text
 secure/lib/libssl/man/SSL_connect.3 -text
 secure/lib/libssl/man/SSL_do_handshake.3 -text
+secure/lib/libssl/man/SSL_export_keying_material.3 svneol=native#text/plain
 secure/lib/libssl/man/SSL_free.3 -text
 secure/lib/libssl/man/SSL_get_SSL_CTX.3 -text
 secure/lib/libssl/man/SSL_get_ciphers.3 -text
