add a portsnap config

--- a/.gitattributes
+++ b/.gitattributes
@@ -49265,6 +49265,7 @@ etc/periodic/weekly/Makefile -text
 etc/pf.conf -text
 etc/pf.os -text
 etc/phones -text
+etc/portsnap.conf svneol=native#text/plain
 etc/ppp/ppp.conf -text
 etc/printcap -text
 etc/profile -text
