Add public domain hashmap implementation.

--- a/lib/libmport/Makefile
+++ b/lib/libmport/Makefile
@@ -8,7 +8,7 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		default_cbs.c  merge_primative.c bundle_read_install_pkg.c \
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
-   		stats.c verify.c lock.c mkdir.c
+   		stats.c verify.c lock.c mkdir.c hashmap.c
 INCS=	mport.h mport_dispatch.h
 
 CFLAGS+=	-I${.CURDIR} -fblocks -g
