--- a/secure/libexec/ssh-keysign/Makefile
+++ b/secure/libexec/ssh-keysign/Makefile
@@ -4,7 +4,7 @@
 .include <bsd.own.mk>
 
 PROG=	ssh-keysign
-SRCS=	ssh-keysign.c readconf.c
+SRCS=	ssh-keysign.c readconf.c uidswap.c
 MAN=	ssh-keysign.8
 CFLAGS+=-I${SSHDIR} -include ssh_namespace.h
 SRCS+=	ssh_namespace.h
