enable fts modes

--- a/lib/libsqlite3/Makefile
+++ b/lib/libsqlite3/Makefile
@@ -11,7 +11,8 @@ SRCS=		sqlite3.c
 CFLAGS+=	-I${SQLITEDIR} -DSQLITE_ENABLE_FTS3 -DSQLITE_OS_UNIX=1 \
 		-DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 \
 		-DHAVE_STDLIB_H=1 -DHAVE_INTTYPES_H=1 -DREENTRANT=1 \
-		-DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_RTREE=1
+		-DSQLITE_THREADSAFE=1 -DSQLITE_ENABLE_RTREE=1 \
+		-DSQLITE_ENABLE_FTS5 -DSQLITE_ENABLE_FTS4
 
 WARNS?=		0
 
