--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-/_.amd64.*
-/_.i386.*
-/_.tinderbox*
-/_sparc64.*
+_.tinderbox.*
+_.amd64.*
+_.arm.*
+_.arm64.*
+_.i386.*
+_.ia64.*
+_.mips.*
+_.pc98.*
+_.powerpc.*
+_.riscv.*
+_.sparc64.*
+_.sun4v.*
+GPATH
+GRTAGS
+GTAGS
+ID
+cscope.out
+?cscope.out
