--- a/sys/compat/freebsd32/syscalls.conf
+++ b/sys/compat/freebsd32/syscalls.conf
@@ -1,4 +1,4 @@
-# $MidnightBSD$
+# $FreeBSD: stable/11/sys/compat/freebsd32/syscalls.conf 219559 2011-03-12 08:51:43Z avg $
 sysnames="freebsd32_syscalls.c"
 sysproto="freebsd32_proto.h"
 sysproto_h=_FREEBSD32_SYSPROTO_H_
