--- a/lib/libexpat/Makefile
+++ b/lib/libexpat/Makefile
@@ -1,6 +1,6 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/lib/libexpat/Makefile 313628 2017-02-11 07:03:54Z ngie $
+# $FreeBSD: stable/11/lib/libexpat/Makefile 313538 2017-02-10 07:32:40Z ngie $
 
+PACKAGE=lib${LIB}
 EXPAT=		${SRCTOP}/contrib/expat
 
 LIB=		bsdxml
@@ -17,12 +17,10 @@ CLEANFILES=	bsdxml.h bsdxml_external.h
 
 WARNS?=		2
 
-# OK, so it is not entirely unadultered: we ammend the COPYING
-# to point people to the right place, get rid of some VMS stuff
-# and use FreeBSD style indempotency #ifndefs. We also want to
-# point it at the new bsdxml_external.h rather than the old
-# expat_external.h file.
-#
+# OK, so it is not entirely unadulterated: we amend the COPYING to
+# point people to the right place, get rid of some VMS stuff and use
+# BSD-style include guards.  We also want to point it at the new
+# bsdxml_external.h rather than the old expat_external.h file.
 bsdxml.h: expat.h
 	unifdef -U__VMS < ${.ALLSRC} | \
 	sed -e 's/XmlParse_INCLUDED/_BSD_XML_H_/' \
@@ -31,6 +29,6 @@ bsdxml.h: expat.h
 		> ${.TARGET}
 
 bsdxml_external.h: expat_external.h
-	cp -f ${.ALLSRC} ${.TARGET}
+	${CP} ${.ALLSRC} ${.TARGET}
 
 .include <bsd.lib.mk>
