update firewall config

--- a/sbin/ipf/ipf/Makefile
+++ b/sbin/ipf/ipf/Makefile
@@ -1,6 +1,6 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/ipf/ipf/Makefile 291814 2015-12-04 18:50:12Z bdrewery $
+# $FreeBSD: stable/11/sbin/ipf/ipf/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
+PACKAGE=	ipf
 PROG=		ipf
 SRCS=		${GENHDRS} ipf.c ipfcomp.c ipf_y.c ipf_l.c bpf_filter.c
 MAN=		ipfilter.4 ipfilter.5 ipf.8 ipf.4 ipf.5 ipl.4
@@ -31,11 +31,10 @@ ipf_l.h: lexer.h
 	    ${.ALLSRC} > ${.TARGET}
 
 .if defined(RESCUE)
-LIBIPF_SRCS!=	cd ${.CURDIR}/../libipf && ${MAKE} -V SRCS
+LIBIPF_SRCS!=	cd ${.CURDIR:H}/libipf && ${MAKE} -V SRCS
 SRCS+=	${LIBIPF_SRCS}
 .else
-DPADD+=	${LIBPCAP}
-LDADD+=	-lpcap
+LIBADD+=	pcap
 .endif
 
 .include <bsd.prog.mk>
