--- a/sbin/ipf/ipfs/Makefile
+++ b/sbin/ipf/ipfs/Makefile
@@ -1,6 +1,6 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/sbin/ipf/ipfs/Makefile 145524 2005-04-25 18:55:52Z darrenr $
+#	$FreeBSD: stable/11/sbin/ipf/ipfs/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=ipf
 PROG=	ipfs
 MAN=	ipfs.8
 
