--- a/sbin/ipf/ipfstat/Makefile
+++ b/sbin/ipf/ipfstat/Makefile
@@ -1,12 +1,11 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/sbin/ipf/ipfstat/Makefile 145524 2005-04-25 18:55:52Z darrenr $
+#	$FreeBSD: stable/11/sbin/ipf/ipfstat/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
 NOGCCERROR=	# defined
 
+PACKAGE=	ipf
 PROG=		ipfstat
 SRCS=		ipfstat.c
 MAN=		ipfstat.8
-DPADD+=  	${LIBCURSES}
-LDADD+=  	-lcurses
+LIBADD+=	ncursesw
 
 .include <bsd.prog.mk>
