--- a/sbin/ipf/ipresend/Makefile
+++ b/sbin/ipf/ipresend/Makefile
@@ -1,10 +1,10 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/sbin/ipf/ipresend/Makefile 145630 2005-04-28 16:26:35Z darrenr $
+#	$FreeBSD: stable/11/sbin/ipf/ipresend/Makefile 319185 2017-05-30 04:17:22Z ngie $
 
+PACKAGE=	ipf
 PROG=		ipresend
 SRCS=		ipresend.c ip.c resend.c sbpf.c sock.c 44arp.c
 MAN=		ipresend.1
 
-.PATH:		${.CURDIR}/../../../contrib/ipfilter/ipsend
+.PATH:		${SRCTOP}/contrib/ipfilter/ipsend
 
 .include <bsd.prog.mk>
