--- a/sbin/ipfw/Makefile
+++ b/sbin/ipfw/Makefile
@@ -1,10 +1,11 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/sbin/ipfw/Makefile 263086 2014-03-12 10:45:58Z glebius $
+# $FreeBSD: stable/11/sbin/ipfw/Makefile 346212 2019-04-14 12:39:09Z ae $
 
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
+PACKAGE=ipfw
 PROG=	ipfw
-SRCS=	ipfw2.c dummynet.c ipv6.c main.c nat.c
+SRCS=	ipfw2.c dummynet.c ipv6.c main.c nat.c tables.c
+SRCS+=	nat64clat.c nat64lsn.c nat64stl.c nptv6.c
 WARNS?=	2
 
 .if ${MK_PF} != "no"
@@ -12,8 +13,7 @@ SRCS+=	altq.c
 CFLAGS+=-DPF
 .endif
 
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
+LIBADD=	jail util
 MAN=	ipfw.8
 
 .include <bsd.prog.mk>
