--- a/sbin/sconfig/Makefile
+++ b/sbin/sconfig/Makefile
@@ -1,6 +1,7 @@
 # Cronyx Id: sbin.sconfig.Makefile,v 1.1.4.1 2003/02/17 12:51:24 rik Exp $
-# $MidnightBSD$
+# $FreeBSD: stable/11/sbin/sconfig/Makefile 298107 2016-04-16 07:45:30Z gjb $
 
+PACKAGE=runtime
 PROG=	sconfig
 MAN=	sconfig.8
 MANSUBDIR= /i386
