--- a/usr.bin/tar/tests/Makefile
+++ b/usr.bin/tar/tests/Makefile
@@ -1,20 +1,18 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/tar/tests/Makefile 324418 2017-10-08 20:55:45Z mm $
+# $FreeBSD: stable/11/usr.bin/tar/tests/Makefile 358088 2020-02-19 01:50:47Z mm $
 
-SRCTOP=		${.CURDIR:H:H:H}
-TESTSDIR=	${TESTSBASE}/usr.bin/tar
+PACKAGE=	tests
 
-LIBARCHIVEDIR=	${SRCTOP}/contrib/libarchive
+_LIBARCHIVEDIR=	${SRCTOP}/contrib/libarchive
 
 ATF_TESTS_SH+=	functional_test
 
 BINDIR=		${TESTSDIR}
 
-CFLAGS+=	-DPLATFORM_CONFIG_H=\"${SRCTOP}/lib/libarchive/config_freebsd.h\"
+CFLAGS+=	-DPLATFORM_CONFIG_H=\"${SRCTOP}/lib/libarchive/config_midnightbsd.h\"
 CFLAGS+=	-I${SRCTOP}/lib/libarchive -I${.OBJDIR}
-CFLAGS+=	-I${LIBARCHIVEDIR}/tar -I${LIBARCHIVEDIR}/tar/test
-CFLAGS+=	-I${LIBARCHIVEDIR}/libarchive
-CFLAGS+=	-I${LIBARCHIVEDIR}/test_utils
+CFLAGS+=	-I${_LIBARCHIVEDIR}/libarchive
+CFLAGS+=	-I${_LIBARCHIVEDIR}/tar -I${_LIBARCHIVEDIR}/tar/test
+CFLAGS+=	-I${_LIBARCHIVEDIR}/test_utils
 
 # Uncomment to link against dmalloc
 #LDADD+= -L/usr/local/lib -ldmalloc
@@ -22,7 +20,7 @@ CFLAGS+=	-I${LIBARCHIVEDIR}/test_utils
 
 PROGS+=		bsdtar_test
 
-.PATH: ${LIBARCHIVEDIR}/tar/test
+.PATH: ${_LIBARCHIVEDIR}/tar/test
 TESTS_SRCS=	\
 	test_0.c				\
 	test_basic.c				\
@@ -42,6 +40,7 @@ TESTS_SRCS=	\
 	test_help.c				\
 	test_leading_slash.c			\
 	test_missing_file.c			\
+	test_option_C_mtree.c			\
 	test_option_C_upper.c			\
 	test_option_H_upper.c			\
 	test_option_L_upper.c			\
@@ -54,6 +53,7 @@ TESTS_SRCS=	\
 	test_option_b.c				\
 	test_option_b64encode.c			\
 	test_option_exclude.c			\
+	test_option_exclude_vcs.c		\
 	test_option_fflags.c			\
 	test_option_gid_gname.c			\
 	test_option_grzip.c			\
@@ -72,6 +72,7 @@ TESTS_SRCS=	\
 	test_option_q.c				\
 	test_option_r.c				\
 	test_option_s.c				\
+	test_option_safe_writes.c		\
 	test_option_uid_uname.c			\
 	test_option_uuencode.c			\
 	test_option_xattrs.c			\
@@ -89,38 +90,37 @@ SRCS.bsdtar_test=	\
 	${TESTS_SRCS}	\
 	list.h
 
-.PATH: ${LIBARCHIVEDIR}/test_utils
+.PATH: ${_LIBARCHIVEDIR}/test_utils
 SRCS.bsdtar_test+=	test_main.c		\
 			test_utils.c
 
-DPADD.bsdtar_test=	${LIBARCHIVE}
-LDADD.bsdtar_test=	-larchive
+LIBADD.bsdtar_test=	archive
 
 list.h: ${TESTS_SRCS} Makefile
-	@(cd ${LIBARCHIVEDIR}/tar/test && \
+	@(cd ${_LIBARCHIVEDIR}/tar/test && \
 	grep -h DEFINE_TEST ${.ALLSRC:N*Makefile}) > ${.TARGET}.tmp
 	@mv ${.TARGET}.tmp ${.TARGET}
 
 CLEANFILES+=	list.h list.h.tmp
 
-FILES+=	test_extract.tar.Z.uu
-FILES+=	test_extract.tar.bz2.uu
-FILES+=	test_extract.tar.grz.uu
-FILES+=	test_extract.tar.gz.uu
-FILES+=	test_extract.tar.lrz.uu
-FILES+=	test_extract.tar.lz.uu
-FILES+=	test_extract.tar.lz4.uu
-FILES+=	test_extract.tar.lzma.uu
-FILES+=	test_extract.tar.lzo.uu
-FILES+=	test_extract.tar.xz.uu
-FILES+=	test_extract.tar.zst.uu
-FILES+=	test_leading_slash.tar.uu
-FILES+=	test_option_keep_newer_files.tar.Z.uu
-FILES+=	test_option_passphrase.zip.uu
-FILES+=	test_option_s.tar.Z.uu
-FILES+=	test_patterns_2.tar.uu
-FILES+=	test_patterns_3.tar.uu
-FILES+=	test_patterns_4.tar.uu
-FILES+=	test_print_longpath.tar.Z.uu
+${PACKAGE}FILES+=	test_extract.tar.Z.uu
+${PACKAGE}FILES+=	test_extract.tar.bz2.uu
+${PACKAGE}FILES+=	test_extract.tar.grz.uu
+${PACKAGE}FILES+=	test_extract.tar.gz.uu
+${PACKAGE}FILES+=	test_extract.tar.lrz.uu
+${PACKAGE}FILES+=	test_extract.tar.lz.uu
+${PACKAGE}FILES+=	test_extract.tar.lz4.uu
+${PACKAGE}FILES+=	test_extract.tar.lzma.uu
+${PACKAGE}FILES+=	test_extract.tar.lzo.uu
+${PACKAGE}FILES+=	test_extract.tar.xz.uu
+${PACKAGE}FILES+=	test_extract.tar.zst.uu
+${PACKAGE}FILES+=	test_leading_slash.tar.uu
+${PACKAGE}FILES+=	test_option_keep_newer_files.tar.Z.uu
+${PACKAGE}FILES+=	test_option_passphrase.zip.uu
+${PACKAGE}FILES+=	test_option_s.tar.Z.uu
+${PACKAGE}FILES+=	test_patterns_2.tar.uu
+${PACKAGE}FILES+=	test_patterns_3.tar.uu
+${PACKAGE}FILES+=	test_patterns_4.tar.uu
+${PACKAGE}FILES+=	test_print_longpath.tar.Z.uu
 
 .include <bsd.test.mk>
