--- a/usr.bin/xz/Makefile
+++ b/usr.bin/xz/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/xz/Makefile 292588 2015-12-22 08:03:23Z delphij $
+# $FreeBSD: stable/11/usr.bin/xz/Makefile 319186 2017-05-30 04:27:05Z ngie $
 
 PROG=	xz
 
@@ -11,8 +10,8 @@ LINKS+=	${BINDIR}/xz ${BINDIR}/lzcat
 
 MLINKS= xz.1 unxz.1 xz.1 lzma.1 xz.1 unlzma.1 xz.1 xzcat.1 xz.1 lzcat.1
 
-XZDIR=	${.CURDIR}/../../contrib/xz/src
-LZMALIBDIR=	${.CURDIR}/../../lib/liblzma
+XZDIR=	${SRCTOP}/contrib/xz/src
+LZMALIBDIR=	${SRCTOP}/lib/liblzma
 
 .PATH: ${XZDIR}/xz
 
@@ -44,7 +43,6 @@ CFLAGS+=	-DHAVE_CONFIG_H \
 		-I${LZMALIBDIR} \
 		-I${XZDIR}/common
 
-DPADD=	${LIBLZMA} ${LIBPTHREAD}
-LDADD=	-llzma -lpthread
+LIBADD=	lzma
 
 .include <bsd.prog.mk>
