--- a/usr.bin/xzdec/Makefile
+++ b/usr.bin/xzdec/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/xzdec/Makefile 292588 2015-12-22 08:03:23Z delphij $
+# $FreeBSD: stable/11/usr.bin/xzdec/Makefile 319186 2017-05-30 04:27:05Z ngie $
 
 PROG=	xzdec
 
@@ -7,8 +6,8 @@ LINKS=	${BINDIR}/xzdec ${BINDIR}/lzdec
 
 MLINKS= xzdec.1 lzmadec.1
 
-XZDIR=	${.CURDIR}/../../contrib/xz/src
-LZMALIBDIR=	${.CURDIR}/../../lib/liblzma
+XZDIR=	${SRCTOP}/contrib/xz/src
+LZMALIBDIR=	${SRCTOP}/lib/liblzma
 
 .PATH: ${XZDIR}/xzdec
 
@@ -23,7 +22,6 @@ CFLAGS+=	-DHAVE_CONFIG_H \
 		-I${LZMALIBDIR} \
 		-I${XZDIR}/common
 
-DPADD=	${LIBLZMA} ${LIBPTHREAD}
-LDADD=	-llzma -lpthread
+LIBADD=	lzma
 
 .include <bsd.prog.mk>
