--- a/lib/liblzma/Makefile
+++ b/lib/liblzma/Makefile
@@ -1,6 +1,6 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/lib/liblzma/Makefile 313619 2017-02-11 06:55:35Z ngie $
+# $FreeBSD: stable/11/lib/liblzma/Makefile 313538 2017-02-10 07:32:40Z ngie $
 
+PACKAGE=lib${LIB}
 LIB=		lzma
 LZMADIR=	${SRCTOP}/contrib/xz/src/liblzma
 
@@ -147,8 +147,7 @@ CFLAGS+=	-DHAVE_CONFIG_H \
 		-I${LZMADIR}/simple \
 		-I${LZMADIR:H}/common
 
-DPADD+=		${LIBPTHREAD}
-LDADD+=		-lpthread
+LIBADD+=	pthread
 
 VERSION_DEF=	${.CURDIR}/Versions.def
 SYMBOL_MAPS=	${.CURDIR}/Symbol.map
@@ -156,10 +155,11 @@ CFLAGS+=	-DSYMBOL_VERSIONING
 
 CLEANFILES+=	liblzma.pc
 
-.if !defined(LIBRARIES_ONLY)
-all: liblzma.pc
+FILES=		liblzma.pc
+FILESDIR=	${LIBDATADIR}/pkgconfig
+
 liblzma.pc: liblzma.pc.in
-	@sed -e 's,@prefix@,/usr,g ; \
+	sed -e 's,@prefix@,/usr,g ; \
 		s,@exec_prefix@,/usr,g  ; \
 		s,@libdir@,/usr/lib,g ; \
 		s,@includedir@,/usr/include,g ; \
@@ -167,10 +167,5 @@ liblzma.pc: liblzma.pc.in
 		s,@PACKAGE_VERSION@,${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH},g ; \
 		s,@PTHREAD_CFLAGS@,,g ; \
 		s,@PTHREAD_LIBS@,,g' ${.ALLSRC} > ${.TARGET}
-
-beforeinstall:
-	@${INSTALL} -C -o ${LIBOWN} -g ${LIBGRP} -m ${LIBMODE} \
-		liblzma.pc ${DESTDIR}${LIBDATADIR}/pkgconfig
-.endif
 
 .include <bsd.lib.mk>
