fix a build problem.

--- a/lib/libdns_sd/Makefile
+++ b/lib/libdns_sd/Makefile
@@ -1,6 +1,4 @@
-# $MidnightBSD$
-
-.include <bsd.own.mk>
+.include <src.opts.mk>
 
 .PATH: ${.CURDIR}/../../contrib/mDNSResponder/mDNSShared
 SRCDIR=	${.CURDIR}/../../contrib/mDNSResponder/mDNSShared
