--- a/libexec/getty/Makefile
+++ b/libexec/getty/Makefile
@@ -1,11 +1,9 @@
-# $MidnightBSD$
 #	from: @(#)Makefile	8.1 (Berkeley) 6/4/93
-# $FreeBSD: stable/10/libexec/getty/Makefile 201380 2010-01-02 09:50:19Z ed $
+# $FreeBSD: stable/11/libexec/getty/Makefile 275077 2014-11-25 21:18:18Z bapt $
 
 PROG=	getty
 SRCS=	main.c init.c subr.c chat.c
-DPADD=	${LIBUTIL}
-LDADD=	-lutil
+LIBADD=	util
 MAN=	gettytab.5 ttys.5 getty.8
 
 WARNS?=	1
